fix right margin of resume on mobile

--- a/artist/delta/assets/main.css
+++ b/artist/delta/assets/main.css
@@ -810,8 +810,9 @@ p.press a {
 
 .resume-content {
   display: inline-block;
-  width: 50%;
+  width: 75%;
   vertical-align: top;
+  max-width: 600px;
 }
 
 p.resume-content,
